Fix social links and menu item spacing

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -56,7 +56,7 @@ nav {
     list-style: none;
     padding: 0;
     li {
-      margin: 1em 0;
+      margin-bottom: 0.5em;
       border-bottom: 1px solid $white;
     }
     @include tablet {
@@ -83,7 +83,7 @@ nav {
 .social-links {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 10px;
+  margin-top: 3em;
   @include tablet {
     margin: 10px auto;
     max-width: 75%;
